[package]
name = "typescript-lang"
version = "0.2.0"
edition = "2021"
description = "TypeScript language support module for Writing Unicorns IDE"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-typescript = "0.23"

[dev-dependencies]
